replace V1_User model schema with User  - use User instaed of V1_User because adding api version to model schema seems unnecessary
